[gd_scene load_steps=9 format=3 uid="uid://cupye5bbn2jch"]

[ext_resource type="Script" uid="uid://degkdcgeu02n5" path="res://src/scenes/ui/resources/air_meter.gd" id="1_lohet"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_svue2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jdfac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jh6ji"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j7pa4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gttyq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jhxf"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lohet"]
bg_color = Color(0.788235, 0.792157, 0.921569, 0.454902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="AirMeter" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lohet")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_svue2")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jdfac")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.172549)
theme_override_font_sizes/font_size = 15
text = "1:32.84"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jh6ji")

[node name="MaxLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.172549)
text = "Max: 3:00.00"
horizontal_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_j7pa4")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="UnitsDisplay" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = ">100"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_gttyq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(60, 400)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1jhxf")
theme_override_styles/fill = SubResource("StyleBoxFlat_lohet")
value = 50.0
fill_mode = 3
show_percentage = false

[node name="Timer" type="Timer" parent="."]
one_shot = true
